@@ -1,0 +1,22 @@
+/META.*
+/MYMETA.*
+/Makefile
+/Makefile.old
+/MANIFEST
+/MANIFEST.SKIP
+/MANIFEST.bak
+/blib/
+/pm_to_blib
+/_eumm/
+!/.gitignore
+*.bs
+/xs/*.c
+*.o
+/cover_db/
+*.gc??
+/test-mydeps-*
+/nytprof*
+/Data-Dumper-Concise-*/
+/Data-Dumper-Concise-*.tar.gz
+/Distar*
+
